# postboy

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conan.sh  conanfile.py  docker-compose.yml
benchmarks/: CMakeLists.txt
benchmarks/queues/: CMakeLists.txt  benchmark_boost_mpmc_queue.cpp  benchmark_boost_spsc_queue.cpp  benchmark_moodycamel_mpmc_queue.cpp  benchmark_moodycamel_spsc_queue.cpp  benchmark_postboy_mpmc_queue.cpp  benchmark_postboy_spsc_queue.cpp  benchmark_queue.h  benchmark_spsc_byte_queue.cpp  benchmark_spsc_queue.cpp
src/: CMakeLists.txt
src/carry/: CMakeLists.txt  README.md  carrier.hpp  context.cpp  context.hpp  current.cpp  current.hpp  delayed.cpp  delayed.hpp  empty.cpp  empty.hpp  kv.hpp  mutable.cpp  mutable.hpp  new.hpp  scope.cpp  scope.hpp  wrap.cpp  wrap.hpp
src/carry/detail/: entries.hpp  storage.hpp
src/common/: CMakeLists.txt
src/common/concurrency/: CMakeLists.txt  atomicops.h  locker.cpp  locker.hpp  moodycamel_concurrent_queue.cpp  moodycamel_concurrent_queue.hpp  moodycamel_readerwriter_queue.cpp  moodycamel_readerwriter_queue.hpp  mpsc_unbounded_intrusive_lock_free_queue.cpp  mpsc_unbounded_intrusive_lock_free_queue.hpp  mpsc_unbounded_intrusive_lock_free_stack.cpp  mpsc_unbounded_intrusive_lock_free_stack.hpp  pointer_swap.cpp  pointer_swap.hpp  spinlock.hpp  spsc_byte_queue.cpp  spsc_byte_queue.hpp  spsc_queue.cpp  spsc_queue.hpp  wait_group.cpp  wait_group.hpp
src/common/csv/: CMakeLists.txt  file_reader.cpp  file_reader.hpp  file_writer.cpp  file_writer.hpp  reader.cpp  reader.hpp  types.hpp  writer.cpp  writer.hpp
src/common/http/: CMakeLists.txt  async_request.cpp  async_request.hpp  connection_pull.cpp  connection_pull.hpp  sync_request.cpp  sync_request.hpp  types.hpp
src/common/intrusive/: CMakeLists.txt  forward_list.cpp  forward_list.hpp  list.hpp
src/common/memory/: CMakeLists.txt  buffer.hpp  view.hpp  view_of.cpp  view_of.hpp
src/common/shell_runner/: CMakeLists.txt  runner.cpp  runner.hpp
src/common/system/: CMakeLists.txt  binary_dir.cpp  binary_dir.hpp  cpu_helper.cpp  cpu_helper.hpp  file.cpp  file.hpp  high_resolution_clock.cpp  high_resolution_clock.hpp  latency_sampler.hpp  mmap.cpp  mmap.hpp  page_size.cpp  page_size.hpp
src/common/util/: CMakeLists.txt  assert.hpp  concepts.cpp  concepts.hpp  constexpr_array.hpp  cpu_helper.hpp  defer.hpp  lightweight_function.hpp  move_traits.hpp  panic.cpp  panic.hpp  quantiles.hpp  source_location.cpp  source_location.hpp  strings.hpp  tagged.hpp  time.cpp  time.hpp  types.hpp
src/compass/: CMakeLists.txt  global.cpp  locate.cpp  locate.hpp  locator.hpp  map.cpp  map.hpp  service.hpp
src/config/: CMakeLists.txt  config.cpp  config.h
src/config/proto/: CMakeLists.txt  binding.proto  config.proto  postboy.proto  process.proto  prometheus.proto  telegram_notifier.proto  thread.proto
src/config/proto/processors/: benchmark.proto  binance_candle_generator.proto  binance_feature_generator.proto  binance_md_connector.proto  binance_millitant_strategy.proto  common.proto  instrument_downloader.proto  lgbm_aggressive_predictor.proto  rinat_strategy.proto  websocket.proto
src/config/proto/processors/utils/: binance.proto  connection_pull.proto
src/instrument_manager/: CMakeLists.txt  instrument_manager.cpp  instrument_manager.hpp  types.hpp
src/postboy/: CMakeLists.txt
src/postboy/base/: CMakeLists.txt  binding.cpp  binding.hpp  metrics.cpp  metrics.hpp  postboy.cpp  postboy.hpp  processor.cpp  processor.hpp  putable_processor.cpp  putable_processor.hpp  registry.cpp  registry.hpp  takeable_processor.cpp  takeable_processor.hpp  typed_binding.hpp
src/postboy/base/queues/: CMakeLists.txt  mpmc.hpp  queue.hpp  queue_base.hpp  spsc.hpp
src/postboy/notifiers/: CMakeLists.txt
src/postboy/notifiers/base_message_notifier/: CMakeLists.txt  message_notifier.cpp  message_notifier.hpp
src/postboy/notifiers/telegram_notifier/: CMakeLists.txt  telegram_notifier.cpp  telegram_notifier.hpp
src/postboy/prepared/: CMakeLists.txt  prepared.cpp  prepared.hpp
src/postboy/prometheus_metrics/: CMakeLists.txt  check_names.cpp  check_names.hpp  client_metric.hpp  collectable.hpp  counter.cpp  counter.hpp  family.cpp  family.hpp  gateway.cpp  gateway.hpp  gauge.hpp  histogram.hpp  labels.hpp  metric_family.hpp  metric_types.hpp  proto_serializer.cpp  proto_serializer.hpp  registry.cpp  registry.hpp  text_serializer.cpp  text_serializer.hpp
src/postboy/prometheus_metrics/details/: builder.cpp  builder.hpp
src/postboy/prometheus_metrics/proto/: CMakeLists.txt  import_metrics.proto  metric_family.proto
src/postboy/runtime/: CMakeLists.txt  runtime.cpp  runtime.hpp
src/processors/: CMakeLists.txt  README.md
src/processors/benchmark/: CMakeLists.txt  dummy_uint64.cpp  latency_collector.cpp  now.cpp
src/processors/common/: CMakeLists.txt  dummy.cpp  file_reader.cpp  file_writer.cpp  null.cpp  range.cpp
src/processors/websocket/: CMakeLists.txt  metrics.cpp  metrics.hpp  websocket.cpp
src/refer/: CMakeLists.txt  README.md  managed.cpp  managed.hpp  manual.cpp  manual.hpp  ref.hpp  ref_counted.cpp  ref_counted.hpp  unmanaged.cpp  unmanaged.hpp
src/sure/: CMakeLists.txt  README.md  context.cpp  context.hpp  stack.hpp  trampoline.hpp
src/sure/exceptions/: context.hpp
src/sure/exceptions/nop/: context.cpp  context.hpp
src/sure/exceptions/unix/: context.cpp  context.hpp
src/sure/machine/: context.hpp
src/sure/machine/armv8_a_64/: context.cpp  context.hpp
src/sure/machine/no/: context.cpp  context.hpp
src/sure/machine/ucontext/: context.cpp  context.hpp
src/sure/machine/x86_64/: context.S  context.cpp  context.hpp
src/sure/sanitizer/: context.hpp
src/sure/sanitizer/address/: context.hpp
src/sure/sanitizer/nop/: context.hpp
src/sure/sanitizer/thread/: context.hpp
src/sure/stack/: mmap.cpp  mmap.hpp  new.hpp  thread.cpp  thread.hpp
src/thread_manager/: CMakeLists.txt  thread_manager.cpp  thread_manager.hpp  types.hpp
src/websocket/: CMakeLists.txt  README.md  client.cpp  client.hpp
(+41 files in other folders)
